# daily-thirty

./: .gitignore  DECISION.md  DESIGN.md  README.md  config.yaml  pyproject.toml
.github/workflows/: decide.yml  record-trade.yml
cache/: AAPL.parquet  AMD.parquet  AMZN.parquet  MSFT.parquet
scripts/: github_decide.py  github_record.py
site/: decision.json  index.html
src/daily_thirty/: __init__.py  cli.py  decide.py  execute.py  prices.py  publish.py  safety.py  state.py  trading212.py  ui.py
