[project]
name = "daily-thirty"
version = "0.1.0"
description = "Simple £30/day single-stock HOLD or SELL & ROTATE decision tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyarrow>=25.0.0",
    "streamlit>=1.59.1",
    "cryptography>=43.0",
]

[project.scripts]
daily = "daily_thirty.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_thirty"]

[tool.uv]
package = true
